新增： 1、查询某一节次对应时间段的全校上课教室 2、迅速切换周数 3、绩点折线图 优化： 1、BottomSheet 打开时的背景 2、固定到桌面的设置项取消使用 Switch 3、切换学年学期触发按钮与展示学年学期的文字相融合 修复： 1、切换学年学期或周数后下拉刷新就会重置学年学期和周数的错误

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">校园助手</string>
+    <string name="app_name">工韵</string>
     <string name="grade_label">成绩</string>
     <string name="settings_label">设置</string>
     <string name="schedule_label">课表</string>
+    <string name="program_label">培养方案</string>
     <string name="placeholder_main_activity_pin_unavailable">启动器不支持固定微件</string>
 </resources>
