新增 1、成绩筛选新增重置按钮
修复
1、成绩刷新会清除筛选项

改进
1、完善错误处理
2、修改切换课表窗口位置、组件样式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,5 @@
     <string name="retry">重试</string>
     <string name="network_connection_error">网络连接有误</string>
     <string name="login_info_error">学号或密码有误</string>
+    <string name="switch_week">切换周数</string>
 </resources>
