--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -131,4 +131,5 @@
     <string name="retry">Retry</string>
     <string name="network_connection_error">Network connection error</string>
     <string name="login_info_error">Invalid student # or password</string>
+    <string name="switch_week">Switch week</string>
 </resources>
