--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,7 +23,7 @@
     <string name="course_grades_desc">Grades for courses listed in the current course list</string>
     <string name="arithmetic_mean_score">Arithmetic Mean Score</string>
     <string name="rank_title">Academic year semester ranking information</string>
-    <string name="rank_desc">Ranking information for filtered academic year semesters</string>
+    <string name="rank_desc">Ranking information for filtered academic year semesters: %1$s</string>
     <string name="rank_not_available_title">Ranking Information Not Available</string>
     <string name="rank_not_available_desc">Ranking information is not available when filtering course nature or retrieving course title</string>
     <string name="course_score_summary">Course Score Statistics</string>
@@ -86,14 +86,12 @@
     <string name="reset">Reset</string>
     <string name="switch_schedule">Switch class schedule</string>
     <string name="message_befor_exit">Do it again to exit</string>
-    <string name="first_semester_of_freshman_year">Fall of freshman</string>
-    <string name="second_semester_of_freshman_year">Spring of freshman</string>
-    <string name="first_semester_of_sophomore_year">Fall of sophomore</string>
-    <string name="second_semester_of_sophomore_year">Spring of sophomore</string>
-    <string name="first_semester_of_junior_year">Fall of junior</string>
-    <string name="second_semester_of_junior_year">Spring of junior</string>
-    <string name="first_semester_of_senior_year">Fall of senior</string>
-    <string name="second_semester_of_senior_year">Spring of senior</string>
+    <string name="freshman_year">Freshman</string>
+    <string name="sophomore_year">Sophomore</string>
+    <string name="junior_year">Junior</string>
+    <string name="senior_year">Senior</string>
+    <string name="spring_semester">Spring semester</string>
+    <string name="fall_semester">Fall semester</string>
     <string name="score">Point</string>
     <string name="institute">Institute</string>
     <string name="major">Major</string>
