1、彻底解决成绩页面筛选功能的 UI 界面不更新问题。（参考：https://stackoverflow.com/a/77470979/11048731） 2、删除了列表组件自己造的轮子（原 ***Preference），现已使用官方的库并稍作包装（现 ***ListItem）。 3、解决了课表页面初始状态下从第一周跳至当前周的瞬变。 4、数项其他修复。

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -146,4 +146,6 @@
     <string name="unsupport_to_pin">Pin widgets are not supported by current launcher</string>
     <string name="last_update_time">Last updated %1$s</string>
     <string name="course_type_fallback_label">Uncategorised</string>
+    <string name="unidentified">" (Unidentified)"</string>
+    <string name="semester">Semester</string>
 </resources>
